<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="24sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginTop="24sp"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="Enter Your Name"
        android:background="@drawable/et_style"
        android:paddingHorizontal="8sp"
        android:paddingVertical="8sp"
        android:id="@+id/nameEditTextSignup"
        android:textColor="@color/black"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard"
        android:textSize="20sp"
        android:layout_marginTop="24sp"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/enter_your_standard"
        android:background="@drawable/et_style"
        android:paddingHorizontal="8sp"
        android:paddingVertical="8sp"
        android:id="@+id/standardEditTextSignup"
        android:textColor="@color/black"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="20sp"
        android:layout_marginTop="24sp"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="Enter your Mobile No."
        android:background="@drawable/et_style"
        android:paddingHorizontal="8sp"
        android:paddingVertical="8sp"
        android:id="@+id/contactEditTextSignup"
        android:textColor="@color/black"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:digits="0123456789"
        android:maxLength="10"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginTop="24sp"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/enter_your_email"
        android:background="@drawable/et_style"
        android:paddingHorizontal="8sp"
        android:paddingVertical="8sp"
        android:id="@+id/emailEditTextSignup"
        android:textColor="@color/black"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="24sp"
        android:textColor="@color/black"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/enter_your_password"
        android:background="@drawable/et_style"

        android:paddingHorizontal="8sp"
        android:paddingVertical="8sp"
        android:inputType="textPassword"
        android:id="@+id/passwordEditTextSignup"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conform_password"
        android:textSize="20sp"
        android:layout_marginTop="24sp"
        android:textColor="@color/black"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="Conform Your Password"
        android:background="@drawable/et_style"

        android:paddingHorizontal="8sp"
        android:paddingVertical="8sp"
        android:inputType="textPassword"
        android:id="@+id/conformPasswordEditTextSignup"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />
    <CheckBox
        android:id="@+id/togglePasswordCheckBoxSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:layout_margin="2sp"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12sp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:id="@+id/signUpButtonSignup"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/primary_button"
            android:clickable="true"
            android:textStyle="bold"
            android:id="@+id/loginTextViewSignUp"
            />

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>