<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homeactivity.Fragments.profile.fragment_edit_profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="24sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_your_profile"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:layout_marginTop="24sp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:hint="Enter Your Name"
                    android:background="@drawable/et_style"
                    android:paddingHorizontal="8sp"
                    android:paddingVertical="8sp"
                    android:id="@+id/edit_profile_name"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard"
                    android:textSize="20sp"
                    android:layout_marginTop="24sp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:hint="@string/enter_your_standard"
                    android:background="@drawable/et_style"
                    android:paddingHorizontal="8sp"
                    android:paddingVertical="8sp"
                    android:id="@+id/edit_profile_standard"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="20sp"
                    android:layout_marginTop="24sp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:hint="Enter your Mobile No."
                    android:background="@drawable/et_style"
                    android:paddingHorizontal="8sp"
                    android:paddingVertical="8sp"
                    android:id="@+id/edit_profile_contact"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:digits="0123456789"
                    android:maxLength="10"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:layout_marginTop="24sp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:hint="@string/enter_your_email"
                    android:background="@drawable/et_style"
                    android:paddingHorizontal="8sp"
                    android:paddingVertical="8sp"
                    android:id="@+id/edit_profile_email"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12sp"
                    android:text="@string/apply_changes"
                    android:textStyle="bold"
                    android:id="@+id/edit_profile_btn"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>