<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Homeactivity.Fragments.profile.fragment_course_description"
    android:padding="8dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/description_fragment_course_name"/>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="211dp"
                android:elevation="20dp"
                android:padding="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/davil"
                    android:id="@+id/fragment_course_description_img"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product Description here"
                android:textSize="16dp"
                android:id="@+id/fragment_course_description_description"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Intoduction Video"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:padding="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8sp">

                    <ImageView

                        android:layout_width="190sp"
                        android:layout_height="110sp"
                        android:src="@drawable/davil"
                        android:id="@+id/introduction_img"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="110sp"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Here Goes Title "
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:maxHeight="40sp"
                            android:id="@+id/intro_title"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Here Goes DescriptionHere "
                            android:id="@+id/intro_description"
                            android:maxHeight="70sp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="4dp">

            <Button
                android:id="@+id/btn_buy_now"
                style="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buy_now" />


        </LinearLayout>
    </RelativeLayout>


</FrameLayout>